[package]
name = "dogs"
version = "1.2.0"
authors = ["luc libralesso <libralesso.l@gmail.com>"]
edition = "2018"
description = "Discrete Optimization Global Search framework. Implements various search algorithms that can be found in combinatorial optimization or heuristic search."
license = "MIT"
keywords = ["combinatorial", "optimization", "search", "heuristic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
min-max-heap = "1.3.0"
fxhash = "0.2.1"
human_format = "1.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
rand = "0.7.3"
rl-bandit = "1.0.2"