[package]
name = "dogs"
version = "1.4.0"
authors = ["luc libralesso <libralesso.l@gmail.com>"]
edition = "2018"
description = "Discrete Optimization Global Search framework. Implements various search algorithms that can be found in combinatorial optimization or heuristic search."
license = "MIT"
keywords = ["combinatorial", "optimization", "search", "heuristic", "solver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
min-max-heap = "1.3.0"
bit-set = "0.5.2"
fxhash = "0.2.1"
human_format = "1.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
rand = "0.8.3"
rl-bandit = "1.0.2"
ordered-float = "2.0.0"

[dev-dependencies]
criterion = "0.3"

[lib]
path = "src/lib.rs"